# electron_obs_test

./: .gitignore  .gitmodules  README.md  README.txt  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js
mini-obs-module/: CMakeLists.txt  mini-obs.js  package-lock.json  package.json
mini-obs-module/src/: mini-obs.cc
